[workspace]
resolver = "2"
members = [
    "src/a11y",
    "src/concurrent",
    "src/core",
    "src/core_internals",
    "src/crypto",
    "src/event",
    "src/filesystem",
    "src/gaming",
    "src/graphics",
    "src/graphics_3d",
    "src/intl",
    "src/javascript",
    "src/math",
    "src/media",
    "src/net",
    "src/prelude",
    "src/rialight",
    "src/security",
    "src/sound",
    "src/ui",
    "src/util",
]
