[package]
name = "rialight_intl"
version = "1.2.4"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/api"
license = "ISC"
description = "Rialight internationalization module."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16.0"
fluent-syntax = "0.11.0"
icu = "1.1.0"
lazy-regex = "2.3.1"
lazy_static = "1.4.0"
regex = "1.7.0"
reqwest = "0.11.14"
rialight_filesystem = { version = "1", path = "../rialight_filesystem" }
rialight_util = { version = "1", path = "../rialight_util" }
tokio = { version = "1", features = ["full"] }
unic-langid-impl = "0.9.1"

# [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
# stdweb = "0.4.20"
