[package]
name = "rialight_app_config"
version = "1.0.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/api"
license = "ISC"
description = "Rialight application configuration module."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.3.0"
serde = { version = "1", features = ["derive"] }
toml = "0.5.9"
