[package]
name = "rialight_filesystem"
version = "2.0.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/api"
license = "ISC"
description = "Rialight file system API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rialight_prelude = { path = "../prelude" }
rialight_util = { path = "../util" }

[features]
rialight_default_export = ["rialight_prelude/rialight_default_export"]
rialight_browser_export = ["rialight_util/rialight_browser_export"]