[package]
name = "rialight_test_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rialight = { path = "../rialight" }

[build-dependencies]
rialight_build = { path = "../rialight_build" }

# rialight

[package.metadata.rialight.application]
id = "com.qux.foo"
title = "Untitled Application"

[[package.metadata.rialight.install-files]]
match = "res/lang/**/*.ftl"