[package]
name = "rialight_util"
version = "2.0.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/api"
license = "ISC"
description = "Rialight utilities API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2" }
bytes = { version = "1.4.0", features = ["serde"] }
chrono = "0.4.26"
chrono-tz = "0.8.3"
lazy-regex = "3.0.0"
lazy_static = "1.4.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"

# multi-threaded target only dependencies
tokio = { version = "1.29.1", features = ["time"], optional = true }

# browser export only dependencies
stdweb = { version = "0.4.20", optional = true }
web-sys = { version = "0.3.64", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }

[features]
# multi-threaded target only dependencies
rialight_multi_threaded_export = [
    "tokio",
]

# browser export only dependencies
rialight_browser_export = [
    "stdweb",
    "web-sys",
    "wasm-bindgen-futures",
]