[package]
name = "rialight_util"
version = "1.7.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/api"
license = "ISC"
description = "Rialight utilities API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2" }
bytes = { version = "1.4.0", features = ["serde"] }
chrono = { version = "0.4.26", default-features = false, features = ["alloc", "std", "clock"] }
chrono-tz = "0.8.3"
futures = "0.3.28"
lazy-regex = "3.0.0"
lazy_static = "1.4.0"
num-bigint = { version = "0.4", features = ["rand"] }
rust_observable = "0.1.2"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"

# multi-threaded target only dependencies
tokio = { version = "1.29.1", features = ["macros", "time", "rt"], optional = true }

# browser export only dependencies
js-sys = { version = "0.3.64", optional = true }
web-sys = { version = "0.3.64", optional = true, features = ["AbortController", "Window"] }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }

[features]
# non-browser only dependencies
rialight_default_export = [
    "tokio",
]

# browser export only dependencies
rialight_browser_export = [
    "chrono/wasmbind",
    "js-sys",
    "web-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
]