[package]
name = "rialight_filesystem"
version = "1.4.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/api"
license = "ISC"
description = "Rialight file system module."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
lazy-regex = "2.4.1"
rialight_temporal = { version = "1", path = "../rialight_temporal" }
rialight_util = { version = "1",  path = "../rialight_util" }
tokio = { version = "1.21.2", features = ["fs"] }
