[package]
name = "rialight_temporal"
version = "1.0.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/api"
license = "ISC"
description = "Rialight temporal module."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
