[package]
name = "rialight_util"
version = "1.6.1"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/api"
license = "ISC"
description = "Rialight utilities module."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
lazy-regex = "2.3.1"
lazy_static = "1.4.0"
regex = "1.7.0"
